# cj-geochat-oauth2-server/cj-geochat-oauth2-server-remote/src/main/java/cj/geochat/oauth2/server/remote/AppDetailsRemote.java
@@ -1,4 +1,4 @@
-package cj.geochat.server.authorization.remote;
+package cj.geochat.oauth2.server.remote;
 
 import cj.geochat.ability.util.GeochatException;
 import cj.geochat.middle.uc.AppDetails;
