# cj-geochat-oauth2-server/cj-geochat-oauth2-server-starter/src/main/java/cj/geochat/oauth2/server/config/OpenFeignConfig.java
@@ -1,11 +1,11 @@
-package cj.geochat.server.authorization.config;
+package cj.geochat.oauth2.server.config;
 
 import cj.geochat.ability.feign.annotation.EnableCjFeign;
 import org.springframework.cloud.openfeign.EnableFeignClients;
 import org.springframework.context.annotation.Configuration;
 
 @EnableCjFeign
-@EnableFeignClients(basePackages = "cj.geochat.server.authorization.remote")
+@EnableFeignClients(basePackages = "cj.geochat.oauth2.server.remote")
 @Configuration
 public class OpenFeignConfig {
 }
